-- Enable pgcrypto for gen_random_uuid()
CREATE EXTENSION IF NOT EXISTS pgcrypto;

CREATE TABLE "roles_types" (
  "role_id" integer PRIMARY KEY,
  "role_name" varchar(50) NOT NULL,
  "role_description" varchar(255)
);
CREATE TABLE "locations" (
  "location_id" integer PRIMARY KEY,
  "location_name" varchar(50),
  "location_zip" char(5)
);
CREATE TABLE "users" (
  "userid" uuid PRIMARY KEY DEFAULT (gen_random_uuid()),
  "role_id" integer,
  "preferred_location_id" integer,
  "username" varchar(255) UNIQUE NOT NULL,
  "created_at" timestamp,
  "zip_code" char(5)
);
CREATE TABLE "guesses" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "userid" uuid NOT NULL,
  "guessed_date" timestamp NOT NULL,
  "actual_date" timestamp
);
COMMENT ON COLUMN "locations"."location_zip" IS 'location would never have leading zero';
ALTER TABLE "users" ADD FOREIGN KEY ("role_id") REFERENCES "roles_types" ("role_id") DEFERRABLE INITIALLY IMMEDIATE;
ALTER TABLE "users" ADD FOREIGN KEY ("preferred_location_id") REFERENCES "locations" ("location_id") DEFERRABLE INITIALLY IMMEDIATE;
ALTER TABLE "guesses" ADD FOREIGN KEY ("userid") REFERENCES "users" ("userid") DEFERRABLE INITIALLY IMMEDIATE;
-- Defer constraint checking for INSERT
BEGIN;
SET CONSTRAINTS ALL DEFERRED;
INSERT INTO "locations" ("location_id", "location_name", "location_zip")
VALUES
  (1, 'GradHospital', '19145'),
  (2, 'Fishtown', '29405');
INSERT INTO "roles_types" ("role_id", "role_name", "role_description")
VALUES
  (1, 'Guesser', 'One who makes a guess'),
  (2, 'Ref', 'One who confirms the guess'),
  (3, 'Guest', 'One who can view but not submit guesses'),
  (4, 'Admin', 'One who administrates the guess');
INSERT INTO "users" ("userid", "role_id", "preferred_location_id", "username", "created_at", "zip_code")
VALUES
  (CAST('46990890-33b4-4d18-b994-c03595c32df2' AS uuid), 1, 1, 'GlizzyAustin', '2026-06-11', '19146'),
  (CAST('68ec3d0a-6cbb-40b1-9b15-2b8827cc6d9d' AS uuid), 2, 1, 'BinglesClown', '2026-06-11', '29406'),
  (CAST('3a15f18b-90a7-485d-bdb9-0aeab0e63df0' AS uuid), 4, 1, 'GymCODER', '2026-06-11', '19146');
SET CONSTRAINTS ALL IMMEDIATE;
COMMIT;
